--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "@expo/vector-icons": "^14.0.0",
     "@react-navigation/native": "^6.0.2",
     "dayjs": "^1.11.11",
-    "expo": "~50.0.14",
+    "expo": "^51.0.11",
+    "expo-brightness": "~11.8.0",
     "expo-crypto": "~12.8.1",
     "expo-font": "~11.10.3",
     "expo-image-picker": "~14.7.1",
@@ -28,11 +29,10 @@
     "expo-web-browser": "~12.8.2",
     "react": "18.2.0",
     "react-dom": "18.2.0",
-    "react-native": "0.73.6",
+    "react-native": "^0.74.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
-    "react-native-web": "~0.19.6",
-    "expo-brightness": "~11.8.0"
+    "react-native-web": "~0.19.6"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
