--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.0",
+    "@react-native-async-storage/async-storage": "^1.24.0",
     "@react-navigation/material-top-tabs": "^6.6.14",
     "@react-navigation/native": "^6.0.2",
+    "@supabase/supabase-js": "^2.44.4",
     "dayjs": "^1.11.11",
     "expo": "^51.0.11",
     "expo-brightness": "~11.8.0",
@@ -31,11 +33,14 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "^0.74.2",
+    "react-native-elements": "^3.4.3",
+    "react-native-pager-view": "6.3.0",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
     "react-native-tab-view": "^3.5.2",
+    "react-native-url-polyfill": "^2.0.0",
     "react-native-web": "~0.19.6",
-    "react-native-pager-view": "6.3.0"
+    "expo-secure-store": "~13.0.2"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
